--- a/aces/dashboard/ACES/Views/Login/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Login/Index.cshtml
@@ -21,8 +21,8 @@
                     <h3>ACES Login</h3>
                 </div>
                 <form>
-                    <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
-                    <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+                    <input type="text" id="login" class="fadeIn second" name="username" placeholder="Email">
+                    <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
                     <input type="submit" class="fadeIn fourth" value="Log In">
                     <input type="button" value="Sign-up" class="fadeIn fifth" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Index", "Signup")'" />
                 </form>
