--- a/aces/dashboard/ACES/Views/Assignments/AssignmentStudentCommits.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/AssignmentStudentCommits.cshtml
@@ -16,6 +16,7 @@
                 <th>Lines Deleted</th>
                 <th>Number of Watermarks</th>
                 <th>Points Earned</th>
+                <th>JSON Results</th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +28,7 @@
                 <td>@commit.LinesDeleted</td>
                 <td>@commit.NumWatermarks/@Model.NumWatermarks</td>
                 <td>@commit.PointsEarned/@Model.Assignment.PointsPossible</td>
+                <td>@commit.JSONCode</td>
             </tr>
             }
         </tbody>
