code updated to download a specific assignment with aID query string parameter

--- a/aces/dashboard/ACES/Views/Login/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Login/Index.cshtml
@@ -25,7 +25,7 @@
                     <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
                     <input type="submit" class="fadeIn fourth" value="Log In">
                     <input type="button" value="Sign-up" class="fadeIn fifth" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Index", "Signup")'" />
-                    <input type="hidden" id="courseID" name="courseID" value=@ViewBag.courseID />
+                    <input type="hidden" id="assignmentID" name="assignmentID" value=@ViewBag.assignmentID />
                 </form>
             </div>
         </div>
