--- a/aces/dashboard/ACES/Views/Assignments/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.RepositoryUrl)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CourseId)
+                @Html.DisplayNameFor(model => model.SectionId)
             </th>
             <th></th>
         </tr>
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.RepositoryUrl)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CourseId)
+                @Html.DisplayFor(modelItem => item.SectionId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
