--- a/aces/dashboard/ACES/Views/Assignments/Details.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.RepositoryUrl)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseId)
+            @Html.DisplayNameFor(model => model.SectionId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseId)
+            @Html.DisplayFor(model => model.SectionId)
         </dd>
     </dl>
 </div>
