Getting repo content, downloading files, pushing back to repo

--- a/aces/dashboard/ACES/Views/StudentInterface/Index.cshtml
+++ b/aces/dashboard/ACES/Views/StudentInterface/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayFor(modelItem => item.CourseName)
             </td>
             <td>
-                <a asp-action="StudentAssignments" asp-route-courseId="@item.Id">Assignments</a> 
+                <a asp-action="StudentAssignments" asp-route-sectionId="@item.Id">Assignments</a> 
             </td>
         </tr>
 }
