--- a/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
+++ b/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
@@ -22,7 +22,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="DownloadAssignment" asp-route-assignmentId="@item.Id">Download Assignment</a>
+                    <a asp-action="StudentAssignments" asp-controller="StudentInterface" asp-route-assignmentId="@item.Id", asp-route-sectionId="@item.SectionId">Download Assignment</a>
                 </td>
             </tr>
         }
