Edit changed to Tweak, Text area box for JSON criteria added to Tweak and Create for assignments.  Redirect after edit changed to go to instructors assingnments instead of all assignments index.

--- a/aces/dashboard/ACES/Views/Courses/CourseAssignments.cshtml
+++ b/aces/dashboard/ACES/Views/Courses/CourseAssignments.cshtml
@@ -28,7 +28,7 @@
                 <td>@assignment.RepositoryUrl</td>
                 <td>@assignment.JSONCode</td>
                 <td>
-                    <a asp-controller="Assignments" asp-action="Edit" asp-route-id="@assignment.Id" asp-route-from="courses">Edit</a> |
+                    <a asp-controller="Assignments" asp-action="Edit" asp-route-id="@assignment.Id" asp-route-from="courses">Tweak</a> |
                     <a asp-controller="Assignments" asp-action="AssignmentStudents" asp-route-id="@assignment.Id">Student Submissions</a> |
                     <a asp-controller="Assignments" asp-action="Delete" asp-route-id="@assignment.Id">Delete</a>
                 </td>
