--- a/aces/dashboard/ACES/Views/Assignments/Create.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Create.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="RepositoryUrl" class="form-control" />
                 <span asp-validation-for="RepositoryUrl" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="JSONCode" class="control-label"></label>
+                <textarea asp-for="JSONCode" class="form-control" rows="4"></textarea>
+                <span asp-validation-for="JSONCode" class="text-danger"></span>
+            </div>
                 <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
