--- a/aces/dashboard/ACES/Views/Assignments/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Index.cshtml
@@ -38,8 +38,8 @@
                 @Html.DisplayFor(modelItem => item.SectionId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Tweak</a> |
+                <!-- <a asp-action="Details" asp-route-id="@item.Id">Details</a> | ************Not implemented in controller, not needed-->
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
