--- a/aces/dashboard/ACES/Views/Assignments/Create.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Create.cshtml
@@ -24,11 +24,16 @@
                 <span asp-validation-for="RepositoryUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="DueDate" class="control-label"></label>
+                <input asp-for="DueDate" class="form-control" />
+                <span asp-validation-for="DueDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="JSONCode" class="control-label"></label>
                 <textarea asp-for="JSONCode" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="JSONCode" class="text-danger"></span>
             </div>
-                <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />
+            <input name="SectionId" value="@ViewBag.CourseId" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
