--- a/aces/dashboard/ACES/Views/Assignments/Edit.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Edit.cshtml
@@ -23,11 +23,21 @@
                 <input asp-for="RepositoryUrl" class="form-control" />
                 <span asp-validation-for="RepositoryUrl" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="DueDate" class="control-label"></label>
+                <input asp-for="DueDate" class="form-control" />
+                <span asp-validation-for="DueDate" class="text-danger"></span>
+            </div>
             <input name="SectionId" value="@ViewBag.SectionId" type="hidden" />  <!--Section ID shouldn't be something that can be changed, hidden value passed-->
             <div class="form-group">
                 <label asp-for="JSONCode" class="control-label"></label>
                 <textarea asp-for="JSONCode" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="JSONCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CanvasLink" class="control-label"></label>
+                <input asp-for="CanvasLink" class="form-control" />
+                <span asp-validation-for="CanvasLink" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
