--- a/aces/dashboard/ACES/Views/Assignments/StudentRepoForm.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/StudentRepoForm.cshtml
@@ -14,6 +14,7 @@
                 <label name="RepoURL" class="control-label">Please Enter your Repo URL:</label>
                 <input name="RepoURL" class="form-control" />
             </div>
+            <input name="assignmentId" value="@ViewBag.assignmentId" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
