--- a/aces/dashboard/ACES/Views/Assignments/Delete.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Delete.cshtml
@@ -25,16 +25,16 @@
             @Html.DisplayFor(model => model.RepositoryUrl)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SectionId)
+            @Html.DisplayNameFor(model => model.CourseId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SectionId)
+            @Html.DisplayFor(model => model.CourseId)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Courses" asp-action="CourseAssignments" asp-route-id="@Model.SectionId">Back to List</a>
+        <a asp-controller="Courses" asp-action="CourseAssignments" asp-route-id="@Model.CourseId">Back to List</a>
     </form>
 </div>
