Revert "CourseId Fix"
This reverts commit 8ba4cb6a2b9390bb835d245ab0e5e98d0a94201c.

--- a/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
+++ b/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
@@ -22,7 +22,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="StudentAssignments" asp-controller="StudentInterface" asp-route-assignmentId="@item.Id", asp-route-courseId="@item.CourseId">Download Assignment</a>
+                    <a asp-action="StudentAssignments" asp-controller="StudentInterface" asp-route-assignmentId="@item.Id", asp-route-sectionId="@item.SectionId">Download Assignment</a>
                 </td>
             </tr>
         }
