--- a/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
+++ b/aces/dashboard/ACES/Views/StudentInterface/StudentAssignments.cshtml
@@ -22,7 +22,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="StudentRepoForm" asp-controller="Assignments" asp-route-assignmentId="@item.Id">Download Assignment</a>
+                    <a asp-action="StudentRepoForm" asp-controller="Assignments" asp-route-assignmentId="@item.Id">Prepare Repository</a>
                 </td>
             </tr>
         }
