--- a/aces/dashboard/ACES/Views/Assignments/AssignmentStudents.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/AssignmentStudents.cshtml
@@ -9,14 +9,15 @@
 <h3>Students with Submissions</h3>
 
 <input type="button" value="Compare" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Index", "Comparison", new { @Model.AssignmentId })'" />
-
+<p> </p>
+<input type="button" value="View Results" style="text-align: center" onclick="location.href='@Url.Action("ComparisonResults", "Assignments", new { id = @Model.AssignmentId })'" />
 
 <div>
     <table class="table">
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Commits</th>
+                <th>Comparison Results</th>
                 <th>JSON results</th>
                 <th></th>
             </tr>
