--- a/aces/dashboard/ACES/Views/Assignments/Create.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Create.cshtml
@@ -4,10 +4,20 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link href="~/css/watermark.css" rel="stylesheet" />
+</head>
 
-<h2>Create</h2>
+<h2>Create Assignment</h2>
 
-<h4>Assignment</h4>
+<img id="imageGuide" src="~/images/WatermarkGuide.PNG" alt="Watermark Guide" width="300" height="200" hidden="hidden">
+<input type="button" value="Watermark Guide" onclick="ShowGuide()" />
+<div id="myModal" class="modal">
+    <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="JSONCode" class="control-label"></label>
-                <textarea asp-for="JSONCode" class="form-control" rows="4"></textarea>
+                <textarea class="form-control" rows="15">@ViewBag.JSON</textarea>
                 <span asp-validation-for="JSONCode" class="text-danger"></span>
             </div>
             <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />
@@ -46,5 +56,6 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/watermark.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
