updated comparison view.  removed some unused code.

--- a/aces/dashboard/ACES/Views/Assignments/ComparisonResults.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/ComparisonResults.cshtml
@@ -59,7 +59,7 @@
                     <td>@result.Whitespaces</td>
                 }
                 <td>@result.NumberOfCommits</td>
-                <td><div>D: @result.AverageTime.Days</div> <div>Hr: @result.AverageTime.Hours</div> <div>Mn: @result.AverageTime.Minutes</div> <div>S: @result.AverageTime.Seconds</div></td>
+                <td><div>Days: @result.AverageTime.Days</div> <div>Hrs: @result.AverageTime.Hours</div> <div>Mins: @result.AverageTime.Minutes</div> <div>Secs: @result.AverageTime.Seconds</div></td>
                 <td>@result.LinesAdded</td>
                 <td>@result.LinesDeleted</td>
                 @if (result.OtherWatermark != "none")
