--- a/aces/dashboard/ACES/Views/Assignments/StudentRepoForm.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/StudentRepoForm.cshtml
@@ -9,12 +9,12 @@
     string labelRepo;
     if (String.IsNullOrWhiteSpace(warning))
     {
-        labelRepo = "Please Enter your Repo URL:";
-    }
-    else
-    {
-        labelRepo = "You entered the following Repo URL:";
-    }
+        labelRepo = "Please Enter your Repo URL (E.g., https://github.com/InstructorClassroom/Assignment1-JohnDoe):";
+            }
+            else
+            {
+                labelRepo = String.Empty;
+            }
 }
 
 <h2>Student Repository</h2>
@@ -22,6 +22,10 @@
 <div class="row">
     <div class="col-md-10">
         <form method="post">
+            @if (!String.IsNullOrWhiteSpace(error))
+            {
+                <label class="control-label" style="color:red"><b>@error</b></label>
+            }
             <div class="form-group">
                 <label name="RepoURL" class="control-label">@labelRepo</label>
                 <input name="RepoURL" value="@ViewBag.repoURL" class="form-control" />
@@ -33,25 +37,18 @@
                 <div class="form-group">
                     <input type="submit" value="Submit" class="btn btn-primary" />
                 </div>
-                <div class="form-group">
-                    <label class="control-label"><i>Example: <b>https://github.com/InstructorClassroomSummer2021/Assignment1-JohnDoe</b></i></label>
-                </div>
-            }
-            @if (!String.IsNullOrWhiteSpace(error))
-            {
-                <label class="control-label" style="color:red"><b>@error</b></label>
             }
             @if (!String.IsNullOrWhiteSpace(warning))
             {
                 <div class="form-group">
-                    <label name="Agreed" class="control-label">Click <b>Home</b> to exit this screen. Otherwise, please type <b>Agreed</b> if you want to delete your repo files and to re-add template(s) to start this assignment again:</label>
+                    <label name="Agreed" class="control-label">To delete all your repo files and start over, type <b>Agreed</b> before clicking the button below:</label>
                     <input name="Agreed" class="form-control" />
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <label class="control-label"><b><i>@warning</i></b></label>
-                </div>
+                </div>*@
                 <div class="form-group">
-                    <input type="submit" value="Delete Repo Files and Paste New Template(s)" class="btn btn-primary" />
+                    <input type="submit" value="Delete All Repo Files and Start Over" class="btn btn-primary" />
                 </div>
             }
             @if (!String.IsNullOrWhiteSpace(errorDeletingfiles))
