--- a/aces/dashboard/ACES/Views/Assignments/Create.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Create.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="JSONCode" class="control-label"></label>
-                <textarea class="form-control" rows="15">@ViewBag.JSON</textarea>
+                <textarea asp-for="JSONCode" class="form-control" rows="15"></textarea>
                 <span asp-validation-for="JSONCode" class="text-danger"></span>
             </div>
             <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />
