Added link tag in shared layout page to display favicon.

--- a/aces/dashboard/ACES/Views/Shared/_Layout.cshtml
+++ b/aces/dashboard/ACES/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - ACES</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/shared.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 @{
     bool isFaculty = false;
