--- a/aces/dashboard/ACES/Views/Courses/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Courses/Index.cshtml
@@ -30,6 +30,7 @@
                 <a asp-action="Edit" asp-route-id="@course.Id">Edit</a> |
                 <a asp-action="CourseAssignments" asp-route-id="@course.Id">Assignments</a> |
                 <a asp-action="Delete" asp-route-id="@course.Id">Delete</a>
+                <a asp-action="Archive" asp-route-id="@course.Id">Archive</a>
             </td>
         </tr>
 }
