--- a/aces/dashboard/ACES/Views/Courses/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Courses/Index.cshtml
@@ -26,10 +26,9 @@
             <td style="padding-left: 85px">@course.NumAssignments</td>
             <td style="padding-left: 70px">@course.NumStudents</td>
             <td style="padding-left: 300px">
-                <a asp-action="AddStudent" asp-route-id="@course.Id">Add Students</a> |
                 <a asp-action="Edit" asp-route-id="@course.Id">Edit</a> |
                 <a asp-action="CourseAssignments" asp-route-id="@course.Id">Assignments</a> |
-                <a asp-action="Delete" asp-route-id="@course.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@course.Id">Delete</a> |
                 <a asp-action="Archive" asp-route-id="@course.Id">Archive</a>
             </td>
         </tr>
