--- a/aces/dashboard/ACES/Views/Assignments/OtherWatermarkDetails.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/OtherWatermarkDetails.cshtml
@@ -12,6 +12,7 @@
             <tr>
                 <th>Student</th>
                 <th>Course</th>
+                <th>Instructor</th>
                 <th>Assignment</th>
                 <th>Repo</th>
                 <th>Watermark</th>
@@ -24,6 +25,7 @@
                 <tr>
                     <td>@detail.StudentName</td>
                     <td>@detail.Course</td>
+                    <td>@detail.InstructorName</td>
                     <td>@detail.AssignmentName</td>
                     <td><a href="@detail.StudentRepoName">@detail.StudentRepoName</a></td>
                     <td>@detail.Watermark</td>
