Added Filename to Foreign watermark view

--- a/aces/dashboard/ACES/Views/Assignments/OtherWatermarkDetails.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/OtherWatermarkDetails.cshtml
@@ -14,6 +14,7 @@
                 <th>Course</th>
                 <th>Instructor</th>
                 <th>Assignment</th>
+                <th>File</th>
                 <th>Repo</th>
                 <th>Watermark</th>
 
@@ -27,6 +28,7 @@
                     <td>@detail.Course</td>
                     <td>@detail.InstructorName</td>
                     <td>@detail.AssignmentName</td>
+                    <td>@detail.FileName</td>
                     <td><a href="@detail.StudentRepoName">@detail.StudentRepoName</a></td>
                     <td>@detail.Watermark</td>
                 </tr>
