--- a/aces/dashboard/ACES/Views/PasswordReset/Index.cshtml
+++ b/aces/dashboard/ACES/Views/PasswordReset/Index.cshtml
@@ -13,22 +13,20 @@
 <body>
     <style>
     </style>
-    @using (Html.BeginForm("AttemptLogin", "Login", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("AttemptPasswordReset", "PasswordReset", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <div class="fadeIn first" style="padding-top: 25px;">
-                    <h3>ACES Login</h3>
+                    <h3>ACES Password Reset</h3>
                 </div>
                 <form>
                     <asp:Label ID="lblLoginError" runat="server" AssociatedControlID="Login" style="color: red"> @ViewBag.lblLoginError</asp:Label>
                     <br />
                     <input type="text" id="login" class="fadeIn second" name="username" placeholder="Email">
-                    <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
-                    <input type="submit" class="fadeIn fourth" value="Log In">
-                    <input type="button" value="Forgot Password" class="fadeIn fifth" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Index", "PasswordReset")'" />
-                    <input type="button" value="Sign-up" class="fadeIn fifth" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Index", "Signup")'" />
-                    <input type="hidden" id="assignmentID" name="assignmentID" value=@ViewBag.assignmentID />
+                    <input type="password" id="password1" class="fadeIn third" name="newPassword" placeholder="New Password">
+                    <input type="password" id="password2" class="fadeIn third" name="repeatPassword" placeholder="Repeat New Password">
+                    <input type="submit" class="fadeIn fourth" value="Change Password">
                 </form>
             </div>
         </div>
