--- a/aces/dashboard/ACES/Views/Shared/_Layout.cshtml
+++ b/aces/dashboard/ACES/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                         }
                     </ul>
                 </div>
+                <a class="nav-link" asp-area="" asp-controller="UserSettings" asp-action="Index">User Settings</a>
                 <a class="nav-link" asp-area="" asp-controller="Logout" asp-action="Index">Logout</a>
             </div>
         </nav>
