--- a/aces/dashboard/ACES/Views/Courses/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Courses/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model List<ACES.Models.Course>
 
+@if (Context.Request.Cookies["IsLoggedIn"].ToString() != "1")
+{
+    <meta http-equiv="refresh" content="0; url=../Login/" />
+}
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,18 +25,19 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var course in Model) {
-        <tr>
-            <td style="padding-left: 30px">@course.CourseName</td>
-            <td style="padding-left: 85px">@course.NumAssignments</td>
-            <td style="padding-left: 70px">@course.NumStudents</td>
-            <td style="padding-left: 300px">
-                <a asp-action="Edit" asp-route-id="@course.Id">Edit</a> |
-                <a asp-action="CourseAssignments" asp-route-id="@course.Id">Assignments</a> |
-                <a asp-action="Delete" asp-route-id="@course.Id">Delete</a> |
-                <a asp-action="Archive" asp-route-id="@course.Id">Archive</a>
-            </td>
-        </tr>
-}
+        @foreach (var course in Model)
+        {
+            <tr>
+                <td style="padding-left: 30px">@course.CourseName</td>
+                <td style="padding-left: 85px">@course.NumAssignments</td>
+                <td style="padding-left: 70px">@course.NumStudents</td>
+                <td style="padding-left: 300px">
+                    <a asp-action="Edit" asp-route-id="@course.Id">Edit</a> |
+                    <a asp-action="CourseAssignments" asp-route-id="@course.Id">Assignments</a> |
+                    <a asp-action="Delete" asp-route-id="@course.Id">Delete</a> |
+                    <a asp-action="Archive" asp-route-id="@course.Id">Archive</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
