--- a/aces/dashboard/ACES/Views/Login/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Login/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
     Layout = null; // This makes the login not inherit _Layout.cshtml
+    var cookie = Context.Request.Cookies["IsLoggedIn"]; // This creates a cookie that tracks if the user is logged in
+    if (cookie == null)                                 // It is set to 0 if not logged in, and 1 if logged in
+        Context.Response.Cookies.Append("IsLoggedIn", 0.ToString());
 }
 <!DOCTYPE html>
 <html>
