--- a/aces/dashboard/ACES/Views/Assignments/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Index.cshtml
@@ -12,9 +12,11 @@
 
 <h2>Assignments</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (Context.Request.Cookies["IsLoggedIn"].ToString() == "1")
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 <table class="table">
     <thead>
         <tr>
@@ -52,3 +54,4 @@
         }
     </tbody>
 </table>
+}
