--- a/aces/dashboard/ACES/Views/AdminInterface/Disable2FA.cshtml
+++ b/aces/dashboard/ACES/Views/AdminInterface/Disable2FA.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Your Courses</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h2>Force Disable 2FA For Users</h2>
+<asp:Label runat="server" style="color: red"> @ViewBag.selectedUserEmail</asp:Label>
+<br/>
+<asp:Label runat="server" style="color: red"> @ViewBag.selectedUserType</asp:Label>
+<br/>
+<asp:Label runat="server" style="color: red"> @ViewBag.selectedUserId</asp:Label>
+<br/>
 <table class="table">
     <thead>
         <tr>
-            <th style="padding-left: 30px">Course</th>
-            <th style="padding-left: 30px">Total Assignments</th>
-            <th style="padding-left: 30px">Total Students</th>
+            <th style="padding-left: 30px">User Email</th>
             <th></th>
         </tr>
     </thead>
@@ -25,7 +25,7 @@
             <tr>
                 <td style="padding-left: 30px">@user.Email</td>
                 <td style="padding-left: 300px">
-                    <a asp-action="Disable2FA" asp-route-id="@user.Email, @user.UserType">Disable</a> |
+                    <a asp-action="Disable2FA" asp-route-userEmail="@user.Email" asp-route-userType="@user.UserType" asp-route-userId="@user.Id">Disable</a> |
                 </td>
             </tr>
         }
