--- a/aces/dashboard/ACES/Views/AdminInterface/Index.cshtml
+++ b/aces/dashboard/ACES/Views/AdminInterface/Index.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Admin Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<link href="~/css/settings.css" rel="stylesheet" />
+
+<div class="wrapper fadeInDown">
+    <div class="fadeIn first" style="padding-top: 25px;">
+        <h2 style="padding-bottom: 20px;">Admin Settings</h2>
+        <hr />
+    </div>
+    <input type="button" value="Force Disable 2FA For Users" class="fadeIn fifth labelButton" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("Disable2FA")'" />
+    <input type="button" value="Approve Professor Accounts" class="fadeIn fifth labelButton" style="text-align: center; top: 80%" onclick="location.href='@Url.Action("ApproveProfessor")'" />
+    <hr />
+</div>
+
