--- a/aces/dashboard/ACES/Views/TwoFactorAuthentication/Enable.cshtml
+++ b/aces/dashboard/ACES/Views/TwoFactorAuthentication/Enable.cshtml
@@ -39,6 +39,7 @@
             Setup code: @ViewBag.SetupCode<br />
 
             <p style="margin-top: 30px;">Then, enter the security code that appears on your device to finalize the pairing</p>
+            <asp:Label runat="server" style="color: red"> @ViewBag.lblAuthError</asp:Label>
             <input type="text" name="inputCode" placeholder="Input Security Code" autofocus/><br />
             <input type="submit" class="fadeIn fourth" value="Submit" style="margin-top: 20px;" />
         </form>
